fixed spacing for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
 
 .choicesPanel {
   margin: auto;
-  width: 30%;
+  width: 40%;
   padding: 20px;
 }
 
